Made variables changes to accomodate BME team. Also fixed Glioblastoma typo and negative age values issue. This closes #80, closes #81, and closes #83

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Delete.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Delete.cshtml
@@ -19,7 +19,9 @@
             <h4>Patient @Html.DisplayFor(model => model.patientID)</h4>
             <hr />
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-md-4">
+                    <b>Patient Info</b>
+                    <hr />
                     <dl class="dl-horizontal">
                         <dt>
                             @Html.DisplayNameFor(model => model.Sex)
@@ -30,14 +32,6 @@
                         </dd>
 
                         <dt>
-                            @Html.DisplayNameFor(model => model.Married)
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.Married)
-                        </dd>
-
-                        <dt>
                             @Html.DisplayNameFor(model => model.Age)
                         </dt>
 
@@ -45,6 +39,59 @@
                             @Html.DisplayFor(model => model.Age)
                         </dd>
 
+                        <dt>
+                            Race
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Integumentary)
+                        </dd>
+
+                        <dt>
+                            Deceased
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Married)
+                        </dd>
+
+                        <dt>
+                            BMI
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Diet)
+                        </dd>
+
+                        <dt>
+                            ASA
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Exercize)
+                        </dd>
+
+                        <dt>
+                            CCI
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Gastrointestinal)
+                        </dd>
+
+                        <dt>
+                            KPS
+                        </dt>
+
+                        <dd>
+                            @Html.DisplayFor(model => model.Constitutional)
+                        </dd>
+                    </dl>
+                </div>
+                <div class="col-md-4">
+                    <b>Tumor Info</b>
+                    <hr />
+                    <dl class="dl-horizontal">
                         <dt>
                             Classification
                         </dt>
@@ -73,22 +120,6 @@
                             @Html.DisplayFor(model => model.TumorLength)
                         </dd>
 
-                        @*<dt>
-                            @Html.DisplayNameFor(model => model.TumorHeight)
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.TumorHeight)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.TumorLength)
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.TumorLength)
-                        </dd>*@
-
                         <dt>
                             Location
                         </dt>
@@ -98,18 +129,10 @@
                         </dd>
                     </dl>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-4">
+                    <b>Review of Systems</b>
+                    <hr />
                     <dl class="dl-horizontal">
-                        <dt>
-                            Review of Systems
-                        </dt><dd></dd>
-                        <dt>
-                            @Html.DisplayNameFor(model => model.Constitutional)
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.Constitutional)
-                        </dd>
 
                         <dt>
                             @Html.DisplayNameFor(model => model.Respiratory)
@@ -128,27 +151,11 @@
                         </dd>
 
                         <dt>
-                            @Html.DisplayNameFor(model => model.Gastrointestinal)
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.Gastrointestinal)
-                        </dd>
-
-                        <dt>
                             @Html.DisplayNameFor(model => model.Musculoskeletal)
                         </dt>
 
                         <dd>
                             @Html.DisplayFor(model => model.Musculoskeletal)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.Integumentary)
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.Integumentary)
                         </dd>
 
                         <dt>
@@ -158,25 +165,10 @@
                         <dd>
                             @Html.DisplayFor(model => model.Neurologic)
                         </dd>
-
-                        <dt>
-                            Exercise
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.Exercize)
-                        </dd>
-
-                        <dt>
-                            @Html.DisplayNameFor(model => model.Diet)
-                        </dt>
-
-                        <dd>
-                            @Html.DisplayFor(model => model.Diet)
-                        </dd>
                     </dl>
                 </div>
             </div>
+            <hr />
             <dl class="dl-horizontal">
                 <dt>
                     Symptoms
