--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Details.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Details.cshtml
@@ -406,7 +406,7 @@ else
                 <hr />
                 <div class="row">
                     <div class="col-md-4">
-                        <b>General Info</b>
+                        <b>Patient Info</b>
                         @Html.ActionLink("(Edit)", "Edit", new { id = Model.patientID })
                         <hr />
                         <dl class="dl-horizontal">
@@ -419,14 +419,6 @@ else
                             </dd>
 
                             <dt>
-                                @Html.DisplayNameFor(model => model.Married)
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.Married)
-                            </dd>
-
-                            <dt>
                                 @Html.DisplayNameFor(model => model.Age)
                             </dt>
 
@@ -434,6 +426,60 @@ else
                                 @Html.DisplayFor(model => model.Age)
                             </dd>
 
+                            <dt>
+                                Race
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.Integumentary)
+                            </dd>
+
+                            <dt>
+                                Deceased
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.Married)
+                            </dd>
+
+                            <dt>
+                                BMI
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.Diet)
+                            </dd>
+
+                            <dt>
+                                ASA
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.Exercize)
+                            </dd>
+
+                            <dt>
+                                CCI
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.Gastrointestinal)
+                            </dd>
+
+                            <dt>
+                                KPS
+                            </dt>
+
+                            <dd>
+                                @Html.DisplayFor(model => model.Constitutional)
+                            </dd>
+                        </dl>
+                    </div>
+                    <div class="col-md-4">
+                        <b>Tumor Info</b>
+                        @Html.ActionLink("(Edit)", "Edit", new { id = Model.patientID })
+                        <hr />
+                        <dl class="dl-horizontal">
                             <dt>
                                 Classification
                             </dt>
@@ -462,22 +508,6 @@ else
                                 @Html.DisplayFor(model => model.TumorLength)
                             </dd>
 
-                            @*<dt>
-                @Html.DisplayNameFor(model => model.TumorHeight)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.TumorHeight)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.TumorLength)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.TumorLength)
-            </dd>*@
-
                             <dt>
                                 Location
                             </dt>
@@ -487,19 +517,11 @@ else
                             </dd>
                         </dl>
                     </div>
-                    <div class="col-md-5">
+                    <div class="col-md-4">
                         <b>Review of Systems</b>
                         @Html.ActionLink("(Edit)", "Edit", new { id = Model.patientID })
                         <hr />
                         <dl class="dl-horizontal">
-
-                            <dt>
-                                @Html.DisplayNameFor(model => model.Constitutional)
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.Constitutional)
-                            </dd>
 
                             <dt>
                                 @Html.DisplayNameFor(model => model.Respiratory)
@@ -518,29 +540,13 @@ else
                             </dd>
 
                             <dt>
-                                @Html.DisplayNameFor(model => model.Gastrointestinal)
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.Gastrointestinal)
-                            </dd>
-
-                            <dt>
                                 @Html.DisplayNameFor(model => model.Musculoskeletal)
                             </dt>
 
                             <dd>
                                 @Html.DisplayFor(model => model.Musculoskeletal)
                             </dd>
-
-                            <dt>
-                                @Html.DisplayNameFor(model => model.Integumentary)
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.Integumentary)
-                            </dd>
-
+                            
                             <dt>
                                 @Html.DisplayNameFor(model => model.Neurologic)
                             </dt>
@@ -548,25 +554,10 @@ else
                             <dd>
                                 @Html.DisplayFor(model => model.Neurologic)
                             </dd>
-
-                            <dt>
-                                Exercise
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.Exercize)
-                            </dd>
-
-                            <dt>
-                                @Html.DisplayNameFor(model => model.Diet)
-                            </dt>
-
-                            <dd>
-                                @Html.DisplayFor(model => model.Diet)
-                            </dd>
                         </dl>
                     </div>
                 </div>
+                <hr />
                 <dl class="dl-horizontal">
                     <dt>
                         Symptoms
