--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
@@ -143,99 +143,124 @@
 
 		@*Data is based on a statistical correlation with: Patient @target.patientID | @targetSimilarity | @targetEffect*@
 		<hr />
-		<div class="row">
-			<div class="col-md-5">
-				<dl class="dl-horizontal">
-					<b>Patient Info</b><hr />
-					<dt>
-						@Html.DisplayNameFor(model => model.Sex)
-					</dt>
-
-					<dd>
-						@Html.DisplayFor(model => model.Sex)
-					</dd>
-
-					<dt>
-						@Html.DisplayNameFor(model => model.Married)
-					</dt>
-
-					<dd>
-						@Html.DisplayFor(model => model.Married)
-					</dd>
-
-					<dt>
-						@Html.DisplayNameFor(model => model.Age)
-					</dt>
-
-					<dd>
-						@Html.DisplayFor(model => model.Age)
-					</dd>
-
-					<dt>
-						Classification
-					</dt>
-
-					<dd>
-						@Html.DisplayFor(model => model.HistologicalClassification)
-					</dd>
-
-					<dt>
-						Grade (WHO)
-					</dt>
-
-					<dd>
-						@Html.DisplayFor(model => model.HistologicalGrade)
-					</dd>
-
-					<dt>
-						Tumor Size (WxHxL)
-					</dt>
-
-					<dd>
-						@Html.DisplayFor(model => model.TumorWidth)
-						x
-						@Html.DisplayFor(model => model.TumorHeight)
-						x
-						@Html.DisplayFor(model => model.TumorLength)
-					</dd>
-
-					@*<dt>
-							@Html.DisplayNameFor(model => model.TumorHeight)
-						</dt>
-
-						<dd>
-							@Html.DisplayFor(model => model.TumorHeight)
-						</dd>
-
-						<dt>
-							@Html.DisplayNameFor(model => model.TumorLength)
-						</dt>
-
-						<dd>
-							@Html.DisplayFor(model => model.TumorLength)
-						</dd>*@
-
-					<dt>
-						Location
-					</dt>
-
-					<dd>
-						@Html.DisplayFor(model => model.TumorLocation)
-					</dd>
-				</dl>
-			</div>
-			<div class="col-md-6">
+        <div class="row">
+            <div class="col-md-4">
+                <b>Patient Info</b>
+                @Html.ActionLink("(Edit)", "Edit", new { id = Model.patientID })
+                <hr />
                 <dl class="dl-horizontal">
-                    <b>Review of Systems</b>
-                    <hr />
                     <dt>
-                        @Html.DisplayNameFor(model => model.Constitutional)
+                        @Html.DisplayNameFor(model => model.Sex)
                     </dt>
 
                     <dd>
+                        @Html.DisplayFor(model => model.Sex)
+                    </dd>
 
+                    <dt>
+                        @Html.DisplayNameFor(model => model.Age)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Age)
+                    </dd>
+
+                    <dt>
+                        Race
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Integumentary)
+                    </dd>
+
+                    <dt>
+                        Deceased
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Married)
+                    </dd>
+
+                    <dt>
+                        BMI
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Diet)
+                    </dd>
+
+                    <dt>
+                        ASA
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Exercize)
+                    </dd>
+
+                    <dt>
+                        CCI
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.Gastrointestinal)
+                    </dd>
+
+                    <dt>
+                        KPS
+                    </dt>
+
+                    <dd>
                         @Html.DisplayFor(model => model.Constitutional)
                     </dd>
+                </dl>
+            </div>
+            <div class="col-md-4">
+                <b>Tumor Info</b>
+                @Html.ActionLink("(Edit)", "Edit", new { id = Model.patientID })
+                <hr />
+                <dl class="dl-horizontal">
+                    <dt>
+                        Classification
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.HistologicalClassification)
+                    </dd>
+
+                    <dt>
+                        Grade (WHO)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.HistologicalGrade)
+                    </dd>
+
+                    <dt>
+                        Tumor Size (WxHxL)
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.TumorWidth)
+                        x
+                        @Html.DisplayFor(model => model.TumorHeight)
+                        x
+                        @Html.DisplayFor(model => model.TumorLength)
+                    </dd>
+
+                    <dt>
+                        Location
+                    </dt>
+
+                    <dd>
+                        @Html.DisplayFor(model => model.TumorLocation)
+                    </dd>
+                </dl>
+            </div>
+            <div class="col-md-4">
+                <b>Review of Systems</b>
+                @Html.ActionLink("(Edit)", "Edit", new { id = Model.patientID })
+                <hr />
+                <dl class="dl-horizontal">
 
                     <dt>
                         @Html.DisplayNameFor(model => model.Respiratory)
@@ -254,27 +279,11 @@
                     </dd>
 
                     <dt>
-                        @Html.DisplayNameFor(model => model.Gastrointestinal)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.Gastrointestinal)
-                    </dd>
-
-                    <dt>
                         @Html.DisplayNameFor(model => model.Musculoskeletal)
                     </dt>
 
                     <dd>
                         @Html.DisplayFor(model => model.Musculoskeletal)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Integumentary)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.Integumentary)
                     </dd>
 
                     <dt>
@@ -284,25 +293,10 @@
                     <dd>
                         @Html.DisplayFor(model => model.Neurologic)
                     </dd>
-
-                    <dt>
-                        Exercise
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.Exercize)
-                    </dd>
-
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Diet)
-                    </dt>
-
-                    <dd>
-                        @Html.DisplayFor(model => model.Diet)
-                    </dd>
                 </dl>
-			</div>
-		</div>
+            </div>
+        </div>
+        <hr />
 		<dl class="dl-horizontal">
 			<dt>
 				Symptoms
