Create page button fix, Compare Now button fix

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Create.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Create.cshtml
@@ -239,7 +239,7 @@
                             <input type="button" value="Next" class="btn btn-default" id="MobileNextButton" />
                         </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" id="SubmitButton">
                         <div class="col-md-offset-2 col-md-10">
                             <input type="submit" value="Create" class="btn btn-default" />
                         </div>
@@ -509,7 +509,7 @@ else
 
                     <div class="form-group" id="SubmitButton">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Next" class="btn btn-default" />
+                            <input type="submit" value="Continue" class="btn btn-default" />
                         </div>
                     </div>
                 </div>
