Compare Now button fix #2

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Details.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Details.cshtml
@@ -726,7 +726,7 @@ else
             </div>
             <hr />
             <p>
-                @using (Html.BeginForm("Results","Patient", new { id = Model.patientID }))
+                @using (Html.BeginForm("Results","Patients", new { id = Model.patientID }))
                 {
                     @Html.AntiForgeryToken()
 
