--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Shared/_Layout.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Shared/_Layout.cshtml
@@ -15,53 +15,60 @@
 <body>
     <div class="container">
         <nav class="navbar navbar-expand-sm navbar-light bg-faded">
-            @Html.ActionLink("Tumor App", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+
+            <div class="navbar-header pull-left">
+                <a class="navbar-brand" href="@Url.Action("Index", "Home")">
+                    <img src="~/Images/dark_logo_transparent.png" alt="Site Logo" style="height:45px; width: 365px" />
+                </a>
+            </div>
+         
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
+
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
 
                     @if (User.Identity.IsAuthenticated)
-                    {
-                        var user = User.Identity;
-                        ApplicationDbContext context = new ApplicationDbContext();
-                        var UserManager = new UserManager<ApplicationUser>(new UserStore<ApplicationUser>(context));
-                        var s = UserManager.GetRoles(user.GetUserId());
-                        if (s[0].ToString() == "Admin")
-                        {
-                            <li class="nav-item" style="margin-left:10px;margin-right:10px;">
-                                @Html.ActionLink("Home", "Index", "Home")
-                            </li>
-                            <li class="nav-item" style="margin-left:10px;margin-right:10px;">
-                                @Html.ActionLink("Patients", "Index", "Patients")
-                            </li>
-                            <li class="nav-item" style="margin-left:10px;margin-right:10px;">
-                                @Html.ActionLink("Compare", "Create", "Patients",new { isCompare = true },null)
-                            </li>
-                            <li class="nav-item" style="margin-left:10px;margin-right:10px;">
-                                @Html.ActionLink("Manage", "Manage", "Home")
-                            </li>
-                        }
-                        else
-                        {
-                            <li class="nav-item" style="margin-left:10px;margin-right:10px;">
-                                @Html.ActionLink("Home", "Index", "Home")
-                            </li>
-                            <li class="nav-item" style="margin-left:10px;margin-right:10px;">
-                                @Html.ActionLink("Compare", "Create", "Patients", new { isCompare = true }, null)
-                            </li>
-                        }
-                    }
-                    else
-                    {
-                        <li class="nav-item" style="margin-left:10px;margin-right:10px;">
-                                @Html.ActionLink("Home", "Index", "Home")
-                            </li>
-                    }
+            {
+                var user = User.Identity;
+                ApplicationDbContext context = new ApplicationDbContext();
+                var UserManager = new UserManager<ApplicationUser>(new UserStore<ApplicationUser>(context));
+                var s = UserManager.GetRoles(user.GetUserId());
+                if (s[0].ToString() == "Admin")
+                {
+                    <li class="nav-item" style="margin-left:10px;margin-right:10px;">
+                        @Html.ActionLink("Home", "Index", "Home")
+                    </li>
+                    <li class="nav-item" style="margin-left:10px;margin-right:10px;">
+                        @Html.ActionLink("Patients", "Index", "Patients")
+                    </li>
+                    <li class="nav-item" style="margin-left:10px;margin-right:10px;">
+                        @Html.ActionLink("Compare", "Create", "Patients", new { isCompare = true }, null)
+                    </li>
+                    <li class="nav-item" style="margin-left:10px;margin-right:10px;">
+                        @Html.ActionLink("Manage", "Manage", "Home")
+                    </li>
+        }
+        else
+        {
+            <li class="nav-item" style="margin-left:10px;margin-right:10px;">
+                @Html.ActionLink("Home", "Index", "Home")
+            </li>
+            <li class="nav-item" style="margin-left:10px;margin-right:10px;">
+                @Html.ActionLink("Compare", "Create", "Patients", new { isCompare = true }, null)
+            </li>
+}
+}
+else
+{
+        <li class="nav-item" style="margin-left:10px;margin-right:10px;">
+            @Html.ActionLink("Home", "Index", "Home")
+        </li>
+}
 
                 </ul>
                 @Html.Partial("_LoginPartial")
