added header and alternate logo

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 
 <div class="jumbotron">
-	
+	<h1>Brain Tumor Application</h1>
 	<p class="lead">Welcome! Use the links above to navigate.</p>
 
     @*demo: visual guide through tumor web app*@
